# drive-remover

./: README.md  app.vala  drive_remover.py  menu.py  menu.vala  meson.build
vala/: README.md  app.vala  meson.build
